--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 :root {
   --white: #fafafa;
   --beige: #f5f0e8;
@@ -679,21 +684,158 @@ footer hr {
   border: none;
 }
 
+/* MOBILE FIXES */
 @media (max-width: 768px) {
+
+  /* Navbar */
+  .navbar {
+    padding: 1rem 1.5rem;
+  }
+
+  .navbar-brand span {
+    font-size: 1.2rem;
+  }
+
+  .nav-link {
+    margin-left: 0;
+    padding: 0.5rem 0;
+    border-bottom: 1px solid var(--light-grey);
+  }
+
+  .navbar-collapse {
+    padding: 1rem 0;
+  }
+
+  /* Hero */
+  .hero {
+    text-align: center;
+    padding: 50px 0 10px;
+    min-height: 50vh;
+  }
+
   .hero h1 {
     font-size: 3rem;
   }
 
+  .hero h1 span {
+  font-size: 3rem;
+}
+
+  .hero-desc {
+    margin: 0 auto 2rem;
+  }
+
   .hero-btns {
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
+  }
+
+  /* Why Us */
+  .why-us {
+    text-align: left;
+    font-size: 3rem;
+    padding-left: 5px;
+  }
+
+  .why-item {
+    text-align: left;
+    padding-left: 5px;
   }
 
   .why-img {
-    height: 350px;
+    height: 300px;
+    margin-top: 2rem;
+  }
+
+   .why-us h2 {
+    font-size: 3rem;
+  }
+  .why-desc{
+    font-size: 1rem;
+  }
+
+  .why-item p {
+    font-size: 1rem;
+  }
+
+  /* Wig CTA */
+  .wig-cta-img {
+    width: 100%;
+    height: auto;
+    max-height: 350px;
+    object-fit: cover;
+    margin-bottom: 2rem;
+  }
+
+  /* Footer */
+  footer .col-lg-4 {
+    text-align: center !important;
+  }
+
+  .footer-socials {
+    justify-content: center;
+    display: flex;
+    gap: 1rem;
+  }
+
+  .footer-socials a {
+    margin-left: 0;
   }
 
   .cta-section h2 {
     font-size: 2rem;
+  }
+
+  .btn-primary-custom,
+  .btn-outline-custom,
+  .btn-outline-dark-custom {
+    padding: 0.7rem 1.5rem;
+    font-size: 0.75rem;
+  }
+
+}
+
+/* IPAD FIXES */
+@media (min-width: 768px) and (max-width: 1024px) {
+
+  /* Hero */
+  .hero h1 {
+    font-size: 4rem;
+  }
+
+  .hero h1 span {
+  font-size: 4rem;
+}
+
+.hero {
+    padding: 80px 0 30px;
+    min-height: 45vh;
+  }
+
+  /* Why Us image */
+  .why-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    aspect-ratio: 1/1;
+  }
+
+  .why-us h2 {
+    font-size: 3rem;
+  }
+
+  .why-desc{
+    font-size: 1rem;
+  }
+
+  .why-item p {
+    font-size: 1rem;
+  }
+
+  /* Wig CTA image */
+  .wig-cta-img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
   }
 }
